# Enterprise_RAG_system

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  evaluation_report.md  main.py  pyproject.toml
data/: README.md
data/policy_docs/: policy_001_data_privacy.md  policy_002_information_security.md  policy_003_acceptable_use.md  policy_004_vendor_management.md  policy_005_incident_response.md  policy_006_remote_work.md  policy_008_ai_tool_usage.md
data/product_catalog/: product_001_techdocs_pro.md  product_002_techdocs_ai_assistant.md  product_003_techdocs_lite.md  product_004_techdocs_analytics.md  product_005_techdocs_onprem.md  product_006_support_plans.md
data/technical_docs/: tech_001_api_authentication.md  tech_002_database_pooling.md  tech_003_microservices_deployment.md  tech_004_search_api.md  tech_005_logging_observability.md  tech_006_backup_recovery.md  tech_007_cicd_pipeline.md
document_implement_plan/: implementation_plan.md  implementation_plan_package.md  pipeline_diagram.html  report_c_level.md  report_engineering.md  submission_answers.md  task.md
frontend/: app.js  index.html  style.css
scripts/: build_graph.py  index_documents.py  seed_data.py  test_graph.py  test_hybrid_search.py  test_post_retrieval.py  test_query_transformation.py
src/: __init__.py  config.py  models.py
src/graph/: __init__.py  entity_extractor.py  entity_models.py  graph_retriever.py  knowledge_graph.py
src/indexing/: document_loader.py  semantic_chunker.py  vector_store.py
src/orchestrator/: __init__.py  evaluator.py  (+1 more)
(+11 files in other folders)
