[project]
name = "enterprise-rag-system"
version = "0.1.0"
description = "Enterprise RAG System for TechDocs Inc. — Advanced document retrieval with Hybrid Search, GraphRAG, and Query Transformation"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "sentence-transformers>=2.2.0",
    "qdrant-client>=1.7.0",
    "rank-bm25>=0.2.2",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "neo4j>=5.0.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-neo4j>=0.1.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "python-dotenv>=1.0.0",
    "nltk>=3.8.0",
    "numpy>=1.24.0",
    "ipykernel>=7.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]
